--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,3 +28,8 @@ jobs:
         with:
           branch: main
           message: 'Generate Contribution Snake'
+      - name: Push to GitHub
+        uses: EndBug/add-and-commit@v7.2.1
+        with:
+          branch: main
+          message: 'Generate Contribution Snake'
